--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-  <header>
+  <header id="home">
     <img class="Top-img" src="img/棚と椅子.jpg" alt="">
     <div class="Title-comment">
       <h1>The Chair</h1>
@@ -59,9 +59,9 @@
       </ul>
       <p>シンプルなランディングページです。</p>
       <p>簡素ですがレスポンシブ対応してます。</p>
-      <p>上部のメニューバーの固定時の動きと</p>
-      <p>スマホ画面ではハンバーガーメニュー❝  <i class="fas fa-bars"></i>  ❞</p>
-        <p>に切り替わるようにしています。</p>
+      <p>上部のメニューバーの固定時の動きと、</p>
+      <p>スマホではハンバーガーメニュー❝  <i class="fas fa-bars"></i>  ❞</p>
+        <p>に切り替わるように工夫しています。</p>
         <p>全体の雰囲気は落ち着いた感じにしました。</p>
     </div>
 
@@ -141,12 +141,16 @@
         </li>
         <li><a href="#">Other Product</a></li>
       </ul>
+      <a href="#home">&#8679;ページトップへ</a>
     </div>
     <div class="information">
       <h3>COMPANY INF.</h3>
       <div class="company">
         <p>【ブランド名 または 企業名】</p>
-        <p>〒100-0000 東京都港区海岸ｘ丁目 竹芝オフィスｘ階</p>
+        <p>〒100-0000 東京都港区海岸ｘ丁目 竹芝ビルｘ階</p>
+      </div>
+      <div class="nekonote">
+        <a href="https://nikukyu-touch.github.io/">猫の手工房 <img src="img/猫の足跡gray.png"></a>
       </div>
     </div>
   </footer>
