--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <link rel="stylesheet" href="css/swiper-bundle.min.css">
 </head>
 <body>
   <header id="home">
@@ -42,94 +43,104 @@
         </div>
       </div>
     </nav>
-    <img class="living" src="img/テーブル イス インテリア家具.jpg" alt="living">
   </header>
 
   <main>
-    <div id="scene">
-      <p>当ページは【猫の手工房<img src="img/猫の足跡_縮小_black.png">】のサンプルページです)</p>
+    <div class="swiper">
+      <ul class="swiper-wrapper">
+        <li class="swiper-slide"><img src="img/テーブル_イス_インテリア家具.jpg" alt=""></li>
+        <li class="swiper-slide"><img src="img/沖縄_美しい海_ヒーリング_椅子.jpg" alt=""></li>
+        <li class="swiper-slide"><img src="img/部屋 家具 インテリア 新生活.jpg" alt=""></li>
+        <li class="swiper-slide"><img src="img/ウッドデッキとキッチン.jpg" alt=""></li>
+        <li class="swiper-slide"><img src="img/アコースティックギターが置かれた趣味部屋.jpg" alt=""></li>
+      </ul>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-pagination"></div>
+    </div>
+
+    <div class="overview">
+      <p>当ページは【猫の手工房<img src="img/猫の足跡_縮小_black.png">】のサンプルページです。</p>
       <p>椅子(いす)製品のランディングページを</p>
       <p>イメージして作成しました。</p>
       <p>（使用画像はすべてフリー素材です）</p>
-      <ul class="scene">
-        <li><img src="img/沖縄_美しい海_ヒーリング_椅子.jpg" alt=""></li>
-        <li><img src="img/部屋 家具 インテリア 新生活.jpg" alt=""></li>
-        <li><img src="img/ウッドデッキとキッチン.jpg" alt=""></li>
-        <li><img src="img/アコースティックギターが置かれた趣味部屋.jpg" alt=""></li>
-      </ul>
-      <p>シンプルなランディングページです。</p>
-      <p>簡素ですがレスポンシブ対応してます。</p>
-      <p>上部のメニューバーの固定時の動きと、</p>
-      <p>スマホではハンバーガーメニュー❝  <i class="fas fa-bars"></i>  ❞</p>
-        <p>に切り替わるように工夫しています。</p>
-        <p>全体の雰囲気は落ち着いた感じにしました。</p>
     </div>
 
-      <section class="usage">
-        <h2>Usage scene</h2>
-        <ul>
-          <li class="orignal">
-            <img src="img/林の中のテーブルとイス.jpg" alt="">
-            <p>Forest</p>
-          </li>
-          <li class="mini">
-            <img src="img/読書する女性.jpg" alt="">
-            <p>Garden</p>
-          </li>
-          <li class="simple">
-            <img src="img/カフェのテーブル.jpg" alt="">
-            <p>Cafe</p>
-          </li>
-        </ul>
-      </section>
-
-      <ul class="detail clear">
+    <section class="usage">
+      <h2>Usage scene</h2>
+      <ul>
         <li>
-          <div class="pic scroll">
-            <img src="img/椅子_ちび助.jpg" alt="">
-          </div>
-          <div class="desc">
-            <p>製品の特長、使い心地など</p>
-            <p>テキスト、テキスト</p>
-            <p>テキスト、テキスト</p>
-          </div>
+          <img class="scroll" src="img/林の中のテーブルとイス.jpg" alt="">
+          <p>Forest</p>
         </li>
         <li>
-          <div class="pic scroll">
-            <img src="img/白く明るい部屋に最小限の家具と観葉植物.jpg" alt="">
-          </div>
-          <div class="desc">
-            <p>バリエーションや機能の説明など</p>
-            <p>テキスト、テキスト</p>
-          </div>
+          <img class="scroll" src="img/読書する女性.jpg" alt="">
+          <p>Garden</p>
         </li>
         <li>
-          <div class="pic scroll">
-            <img src="img/椅子席.jpg" alt="">
-          </div>
-          <div class="desc">
-            <p>材質のこだわりポイントなど</p>
-            <p>テキスト、テキスト</p>
-          </div>
-        </li>
-        <li>
-          <div class="pic scroll">
-            <img src="img/爽やかな朝に撮影されたインテリアのイメージ.jpg" alt="">
-          </div>
-          <div class="desc">
-            <p>バリエーションごとの価格設定など</p>
-            <p>テキスト、テキスト</p>
-          </div>
-        </li>
-        <li>
-          <div class="pic scroll">
-            <img src="img/2つの椅子.jpg" alt="">
-          </div>
-          <div class="desc">
-            <p>捕捉したいポイントなど</p>
-          </div>
+          <img class="scroll" src="img/カフェのテーブル.jpg" alt="">
+          <p>Cafe</p>
         </li>
       </ul>
+      <div class="overview">
+        <p>シンプルなランディングページですが、</p>
+        <p>レスポンシブ対応してます。</p>
+        <p>上部のメニューバーは、</p>
+        <p>スクロールしてから固定されます。</p>
+        <p>PCタブレットではナビゲーションが</p>
+        <p>横並びに、スマホでは❝  <i class="fas fa-bars"></i>  ❞に</p>
+        <p>切り替わるように工夫しています。</p>
+        <p>全体の雰囲気は落ち着いた感じにてます。</p>
+      </div>
+    </section>
+
+    <ul class="detail clear">
+      <li>
+        <div class="pic scroll">
+          <img src="img/椅子_ちび助.jpg" alt="">
+        </div>
+        <div class="desc">
+          <p>製品の特長、使い心地など</p>
+          <p>テキスト、テキスト</p>
+          <p>テキスト、テキスト</p>
+        </div>
+      </li>
+      <li>
+        <div class="pic scroll">
+          <img src="img/白く明るい部屋に最小限の家具と観葉植物.jpg" alt="">
+        </div>
+        <div class="desc">
+          <p>バリエーションや機能の説明など</p>
+          <p>テキスト、テキスト</p>
+        </div>
+      </li>
+      <li>
+        <div class="pic scroll">
+          <img src="img/椅子席.jpg" alt="">
+        </div>
+        <div class="desc">
+          <p>材質のこだわりポイントなど</p>
+          <p>テキスト、テキスト</p>
+        </div>
+      </li>
+      <li>
+        <div class="pic scroll">
+          <img src="img/爽やかな朝に撮影されたインテリアのイメージ.jpg" alt="">
+        </div>
+        <div class="desc">
+          <p>バリエーションごとの価格設定など</p>
+          <p>テキスト、テキスト</p>
+        </div>
+      </li>
+      <li>
+        <div class="pic scroll">
+          <img src="img/2つの椅子.jpg" alt="">
+        </div>
+        <div class="desc">
+          <p>捕捉したいポイントなど</p>
+        </div>
+      </li>
+    </ul>
   </main>
 
   <footer>
@@ -156,6 +167,8 @@
   </footer>
   <script src="js/navfix.js"></script>
   <script src="js/scroll.js"></script>
+  <script src="js/swiper-bundle.min.js"></script>
+  <script src="js/swiper-config.js"></script>
   <script>
     $(function() {
       $('.menu-content a[href]').on('click', function(event) {
