--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       </li>
       <li>
         <div class="pic scroll">
-          <img src="img/2つの椅子.jpg" alt="">
+          <img src="img/休憩所.jpg" alt="">
         </div>
         <div class="desc">
           <p>捕捉したいポイントなど</p>
