画像ファイル名変更

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <ul class="swiper-wrapper">
         <li class="swiper-slide"><img src="img/テーブル_イス_インテリア家具.jpg" alt=""></li>
         <li class="swiper-slide"><img src="img/沖縄_美しい海_ヒーリング_椅子.jpg" alt=""></li>
-        <li class="swiper-slide"><img src="img/部屋 家具 インテリア 新生活.jpg" alt=""></li>
+        <li class="swiper-slide"><img src="img/部屋_家具_インテリア_新生活.jpg" alt=""></li>
         <li class="swiper-slide"><img src="img/ウッドデッキとキッチン.jpg" alt=""></li>
         <li class="swiper-slide"><img src="img/アコースティックギターが置かれた趣味部屋.jpg" alt=""></li>
       </ul>
