--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
       <ul>
         <li>
           <img class="scroll" src="img/林の中のテーブルとイス.jpg" alt="">
-          <p>Forest</p>
+          <p class="scroll">Forest</p>
         </li>
         <li>
           <img class="scroll" src="img/読書する女性.jpg" alt="">
-          <p>Garden</p>
+          <p class="scroll">Garden</p>
         </li>
         <li>
           <img class="scroll" src="img/カフェのテーブル.jpg" alt="">
-          <p>Cafe</p>
+          <p class="scroll">Cafe</p>
         </li>
       </ul>
       <div class="overview">
@@ -100,7 +100,7 @@
         <div class="pic scroll">
           <img src="img/椅子_ちび助.jpg" alt="">
         </div>
-        <div class="desc">
+        <div class="desc scroll">
           <p>製品の特長、使い心地など</p>
           <p>テキスト、テキスト</p>
           <p>テキスト、テキスト</p>
@@ -110,7 +110,7 @@
         <div class="pic scroll">
           <img src="img/白く明るい部屋に最小限の家具と観葉植物.jpg" alt="">
         </div>
-        <div class="desc">
+        <div class="desc scroll">
           <p>バリエーションや機能の説明など</p>
           <p>テキスト、テキスト</p>
         </div>
@@ -119,7 +119,7 @@
         <div class="pic scroll">
           <img src="img/椅子席.jpg" alt="">
         </div>
-        <div class="desc">
+        <div class="desc scroll">
           <p>材質のこだわりポイントなど</p>
           <p>テキスト、テキスト</p>
         </div>
@@ -128,7 +128,7 @@
         <div class="pic scroll">
           <img src="img/爽やかな朝に撮影されたインテリアのイメージ.jpg" alt="">
         </div>
-        <div class="desc">
+        <div class="desc scroll">
           <p>バリエーションごとの価格設定など</p>
           <p>テキスト、テキスト</p>
         </div>
@@ -137,7 +137,7 @@
         <div class="pic scroll">
           <img src="img/休憩所.jpg" alt="">
         </div>
-        <div class="desc">
+        <div class="desc scroll">
           <p>捕捉したいポイントなど</p>
         </div>
       </li>
